Prevent `.btn` from stacking on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,6 +168,7 @@ main {
 	left: 18rem;
 	padding: 1rem 1.75rem;
 	position: absolute;
+	top: 0;
 	transition: box-shadow 0.125s ease-in-out;
 
 	&:focus,
